--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,15 @@ a {
   text-align: center;
 }
 
+.header-bars img {
+  width: 40px;
+  display: none;
+}
+
+.header-close img {
+  display: none;
+}
+
 /* Header seris end */
 
 /* Preform seris start */
@@ -760,6 +769,14 @@ a {
   font-size: 20px;
   line-height: 130%;
   color: #FFFFFF;
+}
+
+.footer-social-medya a {
+  transition: 0.2s;
+}
+
+.footer-social-medya a:hover {
+  transform: scale(1.1);
 }
 
 .footer-sibpreforma__text {
@@ -1755,3 +1772,220 @@ a {
 
 /* Appliction seris end */
 /* !! Reform html end !! */
+
+
+/* @@ Mediya @@ */
+
+@media (max-width:1300px) {
+  #header {
+    padding: 0 10px;
+  }
+
+  #company {
+    padding: 0 20px;
+  }
+
+  #footer {
+    padding: 0 10px;
+  }
+
+  #questionnaire-us {
+    padding: 0 10px;
+  }
+
+}
+
+@media (max-width: 1200px) {
+  #questionnaire-us {
+    padding: 0 20px;
+  }
+
+  .product-btn__bik {
+    padding-bottom: 54px;
+  }
+
+  .header-items {
+    display: none;
+  }
+
+  .header-social-medya {
+    display: none;
+  }
+
+  .header-info__email {
+    display: none;
+  }
+
+  .header-bars img {
+    display: block;
+  }
+
+  .preform-fluid__title h1 {
+    font-size: 50px;
+  }
+
+  .preform-fluid__title h1 span {
+    font-size: 50px;
+
+  }
+
+  .preform-fluid__title h2 {
+    font-size: 30px;
+  }
+
+  #product {
+    padding: 0 20px;
+  }
+
+  .product-picture {
+    width: 550px;
+  }
+
+  .product-btn__bik button {
+    width: 600px;
+    height: 55px;
+  }
+
+  .flex-wrap {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 20px;
+  }
+
+  .questionnaire-fluid__btn {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .questionnaire-fluid__btn button {
+    width: 750px;
+  }
+
+  #contact {
+    padding: 0 20px;
+  }
+
+
+}
+
+@media (max-width:1154px) {
+  .product-btn__bik {
+    padding-bottom: -54px;
+  }
+
+  .product-wrap {
+    height: 530px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .header-nav {
+    display: block;
+  }
+
+  .header-items {
+    margin: 0;
+  }
+
+  .header-items a {
+    white-space: nowrap;
+    margin-left: 38px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 140%;
+    color: #f7f6f5;
+  }
+
+  .company-info h3 {
+    max-width: 425px;
+  }
+
+}
+
+@media (max-width:992px) {
+  .preform-fluid__title {
+    margin-left: 10px;
+  }
+
+  .preform-fluid__title {
+    width: 70%;
+  }
+
+  .company-border:last-child {
+    border-left: solid 2px #027BD6;
+    margin-top: 20px;
+  }
+
+  .ma-top {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width:576px) {
+  .preform-fluid__title h1 {
+    font-size: 30px;
+  }
+
+  .preform-fluid__title h1 span {
+    font-size: 30px;
+  }
+
+  .preform-fluid__title h2 {
+    font-size: 20px;
+  }
+
+  .preform-fluid__title {
+    width: 50%;
+  }
+
+  .call-us {
+    margin-right: -70px;
+  }
+
+  .company-info h3 {
+    font-size: 12px;
+    max-width: 350px;
+  }
+
+  .product-picture {
+    width: 300px;
+  }
+
+  .product-btn__bik button {
+    width: 380px;
+
+  }
+
+}
+
+@media(max-width:450px) {
+  .company-info h3 {
+    font-size: 10px;
+    max-width: 250px;
+  }
+
+  .company-info {
+    padding: 10px;
+  }
+
+  .product-picture {
+    width: 200px;
+  }
+
+  .product-btn__bik button {
+    width: 200px;
+  }
+
+  .flex-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .lable-w input {
+    width: 200px;
+  }
+}
