--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,18 @@ input:focus {
   outline: none !important;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 a:active,
 a:focus {
   outline: 0;
